--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <header>
         <h1>JUST FRIENDS</h1>
-        <img src="c:\Users\thami\Downloads\patinhas.png"
+        <img src="ghcr.io/actions/jekyll-build-pages:v1.0.12"
         alt="Cat Illustration">
     </header>
     <nav>
