--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <header>
         <h1>JUST FRIENDS</h1>
-        <img src="ghcr.io/actions/jekyll-build-pages:v1.0.12"
+        <img src="patinhas.png"
         alt="Cat Illustration">
     </header>
     <nav>
@@ -49,13 +49,7 @@
             <!-- Adicione mais figuras conforme necessário -->
         </div>
     </section>
-    <footer>
-        <p>&copy; 2024 SITE MALUCO</p>
-        <img src="c:\Users\thami\Downloads\patinhas.png"
-        alt="Cat Illustration">
-    </footer>
-</body>
-<section id="testimonials">
+    <section id="testimonials">
     <h2>Depoimentos</h2>
     <div class="testimonial">
         <img src="client1.jpg" alt="Cliente 1">
@@ -69,4 +63,11 @@
     </div>
     <!-- Adicione mais depoimentos conforme necessário -->
 </section>
+    <footer>
+        <p>&copy; 2024 SITE MALUCO</p>
+        <img src="patinhas.png"
+        alt="Cat Illustration">
+    </footer>
+</body>
+
 </html>
